--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta name="copyright" content="Jero Rm">
 
   <!-- Favicons -->
-  <link href="./src/assets/img/iconPage.svg" rel="icon">
-  <link href="./src/assets/img/iconPage.svg" rel="apple-touch-icon">
+  <link href="src/assets/img/iconPage.svg" rel="icon">
+  <link href="src/assets/img/iconPage.svg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -22,15 +22,15 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="./src/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="./src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="./src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="./src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="./src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="src/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="./src/App.css" rel="stylesheet">
+  <link href="src/App.css" rel="stylesheet">
 
 </head>
 
@@ -614,7 +614,7 @@
 
   <!-- Template Main JS File -->
   <div id="root"></div>
-  <script type="module" src="./src/main.jsx"></script>
+  <script type="module" src="src/main.jsx"></script>
 
 </body>
 
