--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta name="copyright" content="Jero Rm">
 
   <!-- Favicons -->
-  <link href="https://thehakodrako.github.io/src/assets/img/iconPage.svg" rel="icon">
-  <link href="https://thehakodrako.github.io/src/assets/img/iconPage.svg" rel="apple-touch-icon">
+  <link href="src/assets/img/iconPage.svg" rel="icon">
+  <link href="src/assets/img/iconPage.svg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -22,15 +22,15 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="https://thehakodrako.github.io/src/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="https://thehakodrako.github.io/src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://thehakodrako.github.io/src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://thehakodrako.github.io/src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="https://thehakodrako.github.io/src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="https://thehakodrako.github.io/src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="src/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="https://thehakodrako.github.io/src/App.css" rel="stylesheet">
+  <link href="src/App.css" rel="stylesheet">
 
 </head>
 
@@ -602,19 +602,19 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="https://thehakodrako.github.io/src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="https://thehakodrako.github.io/src/assets/vendor/aos/aos.js"></script>
-  <script src="https://thehakodrako.github.io/src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="https://thehakodrako.github.io/src/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="https://thehakodrako.github.io/src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="https://thehakodrako.github.io/src/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="https://thehakodrako.github.io/src/assets/vendor/typed.js/typed.min.js"></script>
-  <script src="https://thehakodrako.github.io/src/assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="https://thehakodrako.github.io/src/assets/vendor/php-email-form/validate.js"></script>
+  <script src="src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="src/assets/vendor/aos/aos.js"></script>
+  <script src="src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="src/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="src/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="src/assets/vendor/typed.js/typed.min.js"></script>
+  <script src="src/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="src/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <div id="root"></div>
-  <script type="module" src="https://thehakodrako.github.io/src/main.jsx"></script>
+  <script type="module" src="src/main.jsx"></script>
 
 </body>
 
