--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="src/assets/img/me.png" class="img-fluid" alt="">
+            <img src="src/assets/img/me.png" alt="Jero Rm" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Developer &amp; Economist.</h3>
