--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta name="copyright" content="Jero Rm">
 
   <!-- Favicons -->
-  <link href="{`${import.meta.env.BASE_URL}src/assets/img/iconPage.svg" rel="icon">
-  <link href="{`${import.meta.env.BASE_URL}src/assets/img/iconPage.svg" rel="apple-touch-icon">
+  <link href="${import.meta.env.BASE_URL}src/assets/img/iconPage.svg" rel="icon">
+  <link href="${import.meta.env.BASE_URL}src/assets/img/iconPage.svg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -22,15 +22,15 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="{`${import.meta.env.BASE_URL}src/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="{`${import.meta.env.BASE_URL}src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="{`${import.meta.env.BASE_URL}src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="{`${import.meta.env.BASE_URL}src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="{`${import.meta.env.BASE_URL}src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="{`${import.meta.env.BASE_URL}src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="${import.meta.env.BASE_URL}src/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="${import.meta.env.BASE_URL}src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="${import.meta.env.BASE_URL}src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="${import.meta.env.BASE_URL}src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="${import.meta.env.BASE_URL}src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="${import.meta.env.BASE_URL}src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="{`${import.meta.env.BASE_URL}src/App.css" rel="stylesheet">
+  <link href="${import.meta.env.BASE_URL}src/App.css" rel="stylesheet">
 
 </head>
 
@@ -89,7 +89,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="{`${import.meta.env.BASE_URL}src/assets/img/me.png" alt="Jero Rm" class="img-fluid" alt="">
+            <img src="${import.meta.env.BASE_URL}src/assets/img/me.png" alt="Jero Rm" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Developer &amp; Economist.</h3>
@@ -388,7 +388,7 @@
         <div class="col-lg col-sm">
           <a class="card-box" href="https://github.com/TheHakoDrako" target="_blank" rel="noopener noreferrer"
             title="Github - Jero Rm">
-            <img class="img-fluid" src="{`${import.meta.env.BASE_URL}src/assets/img/githubJRM.png" alt="...">
+            <img class="img-fluid" src="${import.meta.env.BASE_URL}src/assets/img/githubJRM.png" alt="...">
             <div class="card-box-caption">
               <div class="project-category text-white-50">GitHub</div>
               <div class="project-name">Jero Rm</div>
@@ -602,19 +602,19 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="{`${import.meta.env.BASE_URL}src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="{`${import.meta.env.BASE_URL}src/assets/vendor/aos/aos.js"></script>
-  <script src="{`${import.meta.env.BASE_URL}src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="{`${import.meta.env.BASE_URL}src/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="{`${import.meta.env.BASE_URL}src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="{`${import.meta.env.BASE_URL}src/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="{`${import.meta.env.BASE_URL}src/assets/vendor/typed.js/typed.min.js"></script>
-  <script src="{`${import.meta.env.BASE_URL}src/assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="{`${import.meta.env.BASE_URL}src/assets/vendor/php-email-form/validate.js"></script>
+  <script src="${import.meta.env.BASE_URL}src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="${import.meta.env.BASE_URL}src/assets/vendor/aos/aos.js"></script>
+  <script src="${import.meta.env.BASE_URL}src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="${import.meta.env.BASE_URL}src/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="${import.meta.env.BASE_URL}src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="${import.meta.env.BASE_URL}src/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="${import.meta.env.BASE_URL}src/assets/vendor/typed.js/typed.min.js"></script>
+  <script src="${import.meta.env.BASE_URL}src/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="${import.meta.env.BASE_URL}src/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <div id="root"></div>
-  <script type="module" src="{`${import.meta.env.BASE_URL}src/main.jsx"></script>
+  <script type="module" src="${import.meta.env.BASE_URL}src/main.jsx"></script>
 
 </body>
 
