--- a/index.html
+++ b/index.html
@@ -602,28 +602,19 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script
-    src="https://github.com/TheHakoDrako/thehakodrako.github.io/tree/master/src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script
-    src="https://github.com/TheHakoDrako/thehakodrako.github.io/tree/master/src/assets/vendor/aos/aos.js"></script>
-  <script
-    src="https://github.com/TheHakoDrako/thehakodrako.github.io/tree/master/src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script
-    src="https://github.com/TheHakoDrako/thehakodrako.github.io/tree/master/src/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script
-    src="https://github.com/TheHakoDrako/thehakodrako.github.io/tree/master/src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script
-    src="https://github.com/TheHakoDrako/thehakodrako.github.io/tree/master/src/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script
-    src="https://github.com/TheHakoDrako/thehakodrako.github.io/tree/master/src/assets/vendor/typed.js/typed.min.js"></script>
-  <script
-    src="https://github.com/TheHakoDrako/thehakodrako.github.io/tree/master/src/assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script
-    src="https://github.com/TheHakoDrako/thehakodrako.github.io/tree/master/src/assets/vendor/php-email-form/validate.js"></script>
+  <script src="/src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="/src/assets/vendor/aos/aos.js"></script>
+  <script src="/src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/src/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="/src/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/src/assets/vendor/typed.js/typed.min.js"></script>
+  <script src="/src/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="/src/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <div id="root"></div>
-  <script type="module" src="https://github.com/TheHakoDrako/thehakodrako.github.io/tree/master/src/main.jsx"></script>
+  <script type="module" src="/src/main.jsx"></script>
 
 </body>
 
