--- a/index.html
+++ b/index.html
@@ -13,24 +13,22 @@
   <meta name="copyright" content="Jero Rm">
 
   <!-- Favicons -->
-  <link href="/src/assets/img/iconPage.svg" rel="icon">
-  <link href="/src/assets/img/iconPage.svg" rel="apple-touch-icon">
+  <link href="./src/assets/img/iconPage.svg" rel="icon">
+  <link href="./src/assets/img/iconPage.svg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+  <link href="./src/assets/fonts/fonts.css" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="/src/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="/src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="/src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="/src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="/src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="./src/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="./src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="./src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="./src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="./src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="/src/App.css" rel="stylesheet">
+  <link href="./src/App.css" rel="stylesheet" type="text/css" charset="utf-8">
 
 </head>
 
@@ -40,6 +38,7 @@
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
   <!-- ======= Header ======= -->
+  <div id="root"></div>
   <header id="header" class="d-flex flex-column justify-content-center">
 
     <nav id="navbar" class="navbar nav-menu">
@@ -62,12 +61,12 @@
       <h1>Jeronimo Ramírez Mejía</h1>
       <p>I'm <span class="typed" data-typed-items="Developer and Economist."></span></p>
       <div class="social-links">
-        <a href="https://www.instagram.com/jero.rm/" target="_blank" rel="noopener noreferrer" class="instagram"><i
-            class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/jero.rm/" target="_blank" rel="noopener noreferrer" class="instagram"
+          title="Instagram JeroRm"><i class="bx bxl-instagram"></i></a>
         <a href="https://co.linkedin.com/in/jeronimo-ramirez-mejia" target="_blank" rel="noopener noreferrer"
-          class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          class="linkedin" title="Linkedin JeroRm"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/TheHakoDrako" target="_blank" rel="noopener noreferrer" class="github"><i
-            class="bx bxl-github"></i></a>
+            class="bx bxl-github" title="Github JeroRm"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -89,7 +88,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="/src/assets/img/me.png" alt="Jero Rm" class="img-fluid" alt="">
+            <img src="./src/assets/img/me.png" alt="Jero Rm" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Developer &amp; Economist.</h3>
@@ -106,11 +105,11 @@
               unwavering commitment to innovation, he strives to deliver captivating and intellectually stimulating
               experiences.
             <p>In addition to the above, he is studying and improving his English, he is also studying on platforms such
-              as <a href="https://platzi.com/p/JeroRm/" target="_blank" rel="noopener noreferrer"
+              as <a href="https://platzi.com/p/JeroRm/" target="_blank" rel="noopener noreferrer" title="Platzi JeroRm"
                 style="text-decoration: underline; font-weight: bold;">Platzi</a>, <a href="https://www.udemy.com"
-                target="_blank" rel="noopener noreferrer"
+                target="_blank" rel="noopener noreferrer" title="Udemy"
                 style="text-decoration: underline; font-weight: bold;">Udemy</a> and <a href="https://www.coursera.org"
-                target="_blank" rel="noopener noreferrer"
+                target="_blank" rel="noopener noreferrer" title="Coursera"
                 style="text-decoration: underline; font-weight: bold;">Coursera</a>.</p>
           </div>
         </div>
@@ -140,7 +139,8 @@
             <div class="progress">
               <span class="skill">Frontend <i class="val">(HTML, CSS, JavaScript, Vite, React y Django)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-label="Progress: 75%" aria-valuenow="75"
+                  aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -148,7 +148,8 @@
             <div class="progress">
               <span class="skill">Backend <i class="val">(PYTHON, PHP, Laravel, NodeJS y JAVA)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-label="Progress: 70%" aria-valuenow="70"
+                  aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -157,7 +158,8 @@
               <span class="skill">Database Management <i class="val">(MYSQL, MongoDB, Oracle, Docker,
                   Laragon)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-label="Progress: 55%" aria-valuenow="55"
+                  aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -169,7 +171,8 @@
             <div class="progress">
               <span class="skill">Economic analysis management <i class="val">(R, Python, Stata y Excel)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-label="Progress: 85%" aria-valuenow="85"
+                  aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -178,7 +181,8 @@
               <span class="skill">Data analysis management <i class="val">(Pandas, Numpy, matplotlib y
                   Seaborn)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-label="Progress: 65%" aria-valuenow="65"
+                  aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -187,7 +191,8 @@
               <span class="skill">Other programs, models and software <i class="val">(Microsoft Office, ERP and
                   MVC)</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-label="Progress: 60%" aria-valuenow="60"
+                  aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -387,8 +392,8 @@
 
         <div class="col-lg col-sm">
           <a class="card-box" href="https://github.com/TheHakoDrako" target="_blank" rel="noopener noreferrer"
-            title="Github - Jero Rm">
-            <img class="img-fluid" src="/src/assets/img/githubJRM.png" alt="...">
+            title="Github JeroRm">
+            <img class="img-fluid" src="./src/assets/img/githubJRM.png" alt="Github JeroRm">
             <div class="card-box-caption">
               <div class="project-category text-white-50">GitHub</div>
               <div class="project-name">Jero Rm</div>
@@ -592,29 +597,29 @@
         &copy; Copyright <strong><span>JeroWebSite</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://www.instagram.com/jero.rm/" target="_blank" rel="noopener noreferrer">Jero Rm</a>
+        Designed by <a href="https://www.instagram.com/jero.rm/" target="_blank" rel="noopener noreferrer"
+          title="Instagram Jero Rm">Jero Rm</a>
       </div>
     </div>
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
+
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="./src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="./src/assets/vendor/aos/aos.js"></script>
-  <script src="./src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="./src/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="./src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="./src/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="./src/assets/vendor/typed.js/typed.min.js"></script>
-  <script src="./src/assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="./src/assets/vendor/php-email-form/validate.js"></script>
+  <script src="./src/assets/vendor/aos/aos.js" defer></script>
+  <script src="./src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
+  <script src="./src/assets/vendor/glightbox/js/glightbox.min.js" defer></script>
+  <script src="./src/assets/vendor/isotope-layout/isotope.pkgd.min.js" defer></script>
+  <script src="./src/assets/vendor/swiper/swiper-bundle.min.js" defer></script>
+  <script src="./src/assets/vendor/typed.js/typed.min.js" defer></script>
+  <script src="./src/assets/vendor/waypoints/noframework.waypoints.js" defer></script>
+  <script src="./src/assets/vendor/php-email-form/validate.js" defer></script>
 
   <!-- Template Main JS File -->
-  <div id="root"></div>
-  <script type="module" src="./src/main.jsx"></script>
+  <script type="module" src="./src/main.jsx" defer></script>
 
 </body>
 
