--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
   <meta name="copyright" content="Jero Rm">
 
   <!-- Favicons -->
-  <link href="https://jerodev.ml/src/assets/img/iconPage.svg" rel="icon">
-  <link href="https://jerodev.ml/src/assets/img/iconPage.svg" rel="apple-touch-icon">
+  <link href="/src/assets/img/iconPage.svg" rel="icon">
+  <link href="/src/assets/img/iconPage.svg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://jerodev.ml/src/assets/fonts/fonts.css" rel="stylesheet">
+  <link href="/src/assets/fonts/fonts.css" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="https://jerodev.ml/src/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="https://jerodev.ml/src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://jerodev.ml/src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://jerodev.ml/src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="https://jerodev.ml/src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="https://jerodev.ml/src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="/src/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="/src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="/src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="https://jerodev.ml/src/App.css" rel="stylesheet" type="text/css" charset="utf-8">
+  <link href="/src/App.css" rel="stylesheet" type="text/css" charset="utf-8">
 
 </head>
 
@@ -88,7 +88,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="https://jerodev.ml/src/assets/img/me.png" alt="Jero Rm" class="img-fluid" alt="">
+            <img src="/src/assets/img/me.png" alt="Jero Rm" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Developer &amp; Economist.</h3>
@@ -393,7 +393,7 @@
         <div class="col-lg col-sm">
           <a class="card-box" href="https://github.com/TheHakoDrako" target="_blank" rel="noopener noreferrer"
             title="Github JeroRm">
-            <img class="img-fluid" src="https://jerodev.ml/src/assets/img/githubJRM.png" alt="Github JeroRm">
+            <img class="img-fluid" src="/src/assets/img/githubJRM.png" alt="Github JeroRm">
             <div class="card-box-caption">
               <div class="project-category text-white-50">GitHub</div>
               <div class="project-name">Jero Rm</div>
@@ -609,17 +609,17 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="https://jerodev.ml/src/assets/vendor/aos/aos.js" defer></script>
-  <script src="https://jerodev.ml/src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
-  <script src="https://jerodev.ml/src/assets/vendor/glightbox/js/glightbox.min.js" defer></script>
-  <script src="https://jerodev.ml/src/assets/vendor/isotope-layout/isotope.pkgd.min.js" defer></script>
-  <script src="https://jerodev.ml/src/assets/vendor/swiper/swiper-bundle.min.js" defer></script>
-  <script src="https://jerodev.ml/src/assets/vendor/typed.js/typed.min.js" defer></script>
-  <script src="https://jerodev.ml/src/assets/vendor/waypoints/noframework.waypoints.js" defer></script>
-  <script src="https://jerodev.ml/src/assets/vendor/php-email-form/validate.js" defer></script>
+  <script src="/src/assets/vendor/aos/aos.js" defer></script>
+  <script src="/src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
+  <script src="/src/assets/vendor/glightbox/js/glightbox.min.js" defer></script>
+  <script src="/src/assets/vendor/isotope-layout/isotope.pkgd.min.js" defer></script>
+  <script src="/src/assets/vendor/swiper/swiper-bundle.min.js" defer></script>
+  <script src="/src/assets/vendor/typed.js/typed.min.js" defer></script>
+  <script src="/src/assets/vendor/waypoints/noframework.waypoints.js" defer></script>
+  <script src="/src/assets/vendor/php-email-form/validate.js" defer></script>
 
   <!-- Template Main JS File -->
-  <script type="module" src="https://jerodev.ml/src/main.jsx" defer></script>
+  <script type="module" src="/src/main.jsx" defer></script>
 
 </body>
 
