--- a/index.html
+++ b/index.html
@@ -4,31 +4,45 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <title>Jero Rm</title>
   <meta content="Developer and Economist. Portafolio." name="description">
   <meta content="Developer, economist, economista, desarrollador, portafolio, website, web" name="keywords">
   <meta name="author" content="Jeronimo Ramirez Mejia">
   <meta name="copyright" content="Jero Rm">
-
-  <!-- Favicons -->
-  <link href="src/assets/img/iconPage.svg" rel="icon">
-  <link href="src/assets/img/iconPage.svg" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
-  <link href="src/assets/fonts/fonts.css" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="src/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="src/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="src/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="src/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <div id="root"></div>
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="JeroRm">
+  <meta property="og:url" content="https://jerodev.ml">
+  <meta property="og:description" content="Developer and Economist. Portafolio.">
 
   <!-- Template Main CSS File -->
-  <link href="src/App.css" rel="stylesheet" type="text/css" charset="utf-8">
+  <link rel="preload stylesheet" href="/src/App.css" as="style">
+
+  <!-- Favicons -->
+  <link href="/src/assets/img/iconPage.svg" rel="icon" type="image/svg+xml">
+
+  <!-- Google Fonts -->
+  <link href="/src/assets/fonts/fonts.css" rel="preload stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="/src/assets/vendor/aos/aos.css" rel="preload stylesheet">
+  <link href="/src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="preload stylesheet">
+  <link href="/src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="preload stylesheet">
+  <link href="/src/assets/vendor/boxicons/css/boxicons.min.css" rel="preload stylesheet">
+  <link href="/src/assets/vendor/glightbox/css/glightbox.min.css" rel="preload stylesheet">
+  <link href="/src/assets/vendor/swiper/swiper-bundle.min.css" rel="preload stylesheet">
+
+  <!-- Vendor JS Files -->
+  <link rel="prefetch" src="/src/assets/vendor/aos/aos.js">
+  <link rel="prefetch" src="/src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js">
+  <link rel="prefetch" src="/src/assets/vendor/glightbox/js/glightbox.min.js">
+  <link rel="prefetch" src="/src/assets/vendor/isotope-layout/isotope.pkgd.min.js">
+  <link rel="prefetch" src="/src/assets/vendor/swiper/swiper-bundle.min.js">
+  <link rel="prefetch" src="/src/assets/vendor/typed.js/typed.min.js">
+  <link rel="prefetch" src="/src/assets/vendor/waypoints/noframework.waypoints.js">
+  <link rel="prefetch" src="/src/assets/vendor/php-email-form/validate.js">
 
 </head>
 
@@ -38,7 +52,6 @@
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
   <!-- ======= Header ======= -->
-  <div id="root"></div>
   <header id="header" class="d-flex flex-column justify-content-center">
 
     <nav id="navbar" class="navbar nav-menu">
@@ -393,7 +406,7 @@
         <div class="col-lg col-sm">
           <a class="card-box" href="https://github.com/TheHakoDrako" target="_blank" rel="noopener noreferrer"
             title="Github JeroRm">
-            <img class="img-fluid" src="src/assets/img/githubJRM.png" alt="Github JeroRm">
+            <img class="img-fluid" src="/src/assets/img/githubJRM.png" alt="Github JeroRm">
             <div class="card-box-caption">
               <div class="project-category text-white-50">GitHub</div>
               <div class="project-name">Jero Rm</div>
@@ -608,18 +621,8 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="src/assets/vendor/aos/aos.js" defer></script>
-  <script src="src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
-  <script src="src/assets/vendor/glightbox/js/glightbox.min.js" defer></script>
-  <script src="src/assets/vendor/isotope-layout/isotope.pkgd.min.js" defer></script>
-  <script src="src/assets/vendor/swiper/swiper-bundle.min.js" defer></script>
-  <script src="src/assets/vendor/typed.js/typed.min.js" defer></script>
-  <script src="src/assets/vendor/waypoints/noframework.waypoints.js" defer></script>
-  <script src="src/assets/vendor/php-email-form/validate.js" defer></script>
-
   <!-- Template Main JS File -->
-  <script type="module" src="src/main.jsx" defer></script>
+  <script type="module" async src="/src/main.jsx"></script>
 
 </body>
 
