update index and src

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- Jero Web Site -->
 <!DOCTYPE html>
+<div id="root"></div>
 <html lang="en">
 
 <head>
@@ -11,38 +12,24 @@
   <meta content="Developer, economist, economista, desarrollador, portafolio, website, web" name="keywords">
   <meta name="author" content="Jeronimo Ramirez Mejia">
   <meta name="copyright" content="Jero Rm">
-  <div id="root"></div>
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="JeroRm">
-  <meta property="og:url" content="https://jerodev.ml">
-  <meta property="og:description" content="Developer and Economist. Portafolio.">
 
   <!-- Template Main CSS File -->
-  <link rel="preload stylesheet" href="/src/App.css" as="style">
+  <link rel="stylesheet" type="text/css" href="/src/App.css">
 
   <!-- Favicons -->
-  <link href="/src/assets/img/iconPage.svg" rel="icon" type="image/svg+xml">
+  <link rel="shortcut icon" type="image/svg+xml" href="/src/assets/img/iconPage.svg">
+  <link rel="apple-touch-icon" type="image/svg+xml" href="/src/assets/img/iconPage.svg">
 
   <!-- Google Fonts -->
-  <link href="/src/assets/fonts/fonts.css" rel="preload stylesheet">
+  <link rel="stylesheet" href="/src/assets/fonts/fonts.css">
 
   <!-- Vendor CSS Files -->
-  <link href="/src/assets/vendor/aos/aos.css" rel="preload stylesheet">
-  <link href="/src/assets/vendor/bootstrap/css/bootstrap.min.css" rel="preload stylesheet">
-  <link href="/src/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="preload stylesheet">
-  <link href="/src/assets/vendor/boxicons/css/boxicons.min.css" rel="preload stylesheet">
-  <link href="/src/assets/vendor/glightbox/css/glightbox.min.css" rel="preload stylesheet">
-  <link href="/src/assets/vendor/swiper/swiper-bundle.min.css" rel="preload stylesheet">
-
-  <!-- Vendor JS Files -->
-  <link rel="prefetch" src="/src/assets/vendor/aos/aos.js">
-  <link rel="prefetch" src="/src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js">
-  <link rel="prefetch" src="/src/assets/vendor/glightbox/js/glightbox.min.js">
-  <link rel="prefetch" src="/src/assets/vendor/isotope-layout/isotope.pkgd.min.js">
-  <link rel="prefetch" src="/src/assets/vendor/swiper/swiper-bundle.min.js">
-  <link rel="prefetch" src="/src/assets/vendor/typed.js/typed.min.js">
-  <link rel="prefetch" src="/src/assets/vendor/waypoints/noframework.waypoints.js">
-  <link rel="prefetch" src="/src/assets/vendor/php-email-form/validate.js">
+  <link rel="stylesheet" href="/src/assets/vendor/aos/aos.css">
+  <link rel="stylesheet" href="/src/assets/vendor/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/src/assets/vendor/bootstrap-icons/bootstrap-icons.css">
+  <link rel="stylesheet" href="/src/assets/vendor/boxicons/css/boxicons.min.css">
+  <link rel="stylesheet" href="/src/assets/vendor/glightbox/css/glightbox.min.css">
+  <link rel="stylesheet" href="/src/assets/vendor/swiper/swiper-bundle.min.css">
 
 </head>
 
@@ -620,6 +607,14 @@
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script type="module" async src="/src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script type="module" async src="/src/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script type="module" async src="/src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script type="module" async src="/src/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script type="module" async src="/src/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script type="module" async src="/src/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script type="module" async src="/src/main.jsx"></script>
