--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!-- Jero Web Site -->
 <!DOCTYPE html>
-<div id="root"></div>
 <html lang="en">
 
 <head>
@@ -12,13 +11,15 @@
   <meta content="Developer, economist, economista, desarrollador, portafolio, website, web" name="keywords">
   <meta name="author" content="Jeronimo Ramirez Mejia">
   <meta name="copyright" content="Jero Rm">
+  <div id="root"></div>
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/svg+xml" href="/public/iconPage.svg">
+  <link rel="shortcut icon" type="image/svg+xml" href="/public/iconPage.svg">
+  <link rel="apple-touch-icon" type="image/svg+xml" href="/public/iconPage.svg">
 
   <!-- Template Main CSS File -->
   <link rel="stylesheet" type="text/css" href="/src/App.css">
-
-  <!-- Favicons -->
-  <link rel="shortcut icon" type="image/svg+xml" href="/src/assets/img/iconPage.svg">
-  <link rel="apple-touch-icon" type="image/svg+xml" href="/src/assets/img/iconPage.svg">
 
   <!-- Google Fonts -->
   <link rel="stylesheet" href="/src/assets/fonts/fonts.css">
@@ -609,15 +610,15 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script type="module" async src="/src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script type="module" async src="/src/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script type="module" async src="/src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script type="module" async src="/src/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script type="module" async src="/src/assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script type="module" async src="/src/assets/vendor/php-email-form/validate.js"></script>
+  <script type="module" src="/src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="/src/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script type="module" src="/src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script type="module" src="/src/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script type="module" src="/src/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script type="module" src="/src/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script type="module" async src="/src/main.jsx"></script>
+  <script type="module" src="/src/main.jsx"></script>
 
 </body>
 
