--- a/index.html
+++ b/index.html
@@ -11,30 +11,32 @@
   <meta content="Developer, economist, economista, desarrollador, portafolio, website, web" name="keywords">
   <meta name="author" content="Jeronimo Ramirez Mejia">
   <meta name="copyright" content="Jero Rm">
-  <div id="root"></div>
 
   <!-- Favicons -->
-  <link rel="shortcut icon" type="image/svg+xml" href="/public/iconPage.svg">
-  <link rel="apple-touch-icon" type="image/svg+xml" href="/public/iconPage.svg">
+  <link rel="shortcut icon" type="image/svg+xml" href="/iconPage.svg">
+  <link rel="apple-touch-icon" type="image/svg+xml" href="/iconPage.svg">
 
   <!-- Template Main CSS File -->
   <link rel="stylesheet" type="text/css" href="/src/App.css">
-
   <!-- Google Fonts -->
   <link rel="stylesheet" href="/src/assets/fonts/fonts.css">
-
-  <!-- Vendor CSS Files -->
-  <link rel="stylesheet" href="/src/assets/vendor/aos/aos.css">
-  <link rel="stylesheet" href="/src/assets/vendor/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/src/assets/vendor/bootstrap-icons/bootstrap-icons.css">
-  <link rel="stylesheet" href="/src/assets/vendor/boxicons/css/boxicons.min.css">
-  <link rel="stylesheet" href="/src/assets/vendor/glightbox/css/glightbox.min.css">
-  <link rel="stylesheet" href="/src/assets/vendor/swiper/swiper-bundle.min.css">
+  <!-- AOS -->
+  <link rel="stylesheet" href="/node_modules/aos/dist/aos.css">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
+  <!-- Boxicons -->
+  <link rel="stylesheet" href="/node_modules/boxicons/css/boxicons.min.css">
+  <!-- GLightbox -->
+  <link rel="stylesheet" href="/node_modules/glightbox/dist/css/glightbox.min.css">
+  <!-- Swiper -->
+  <link rel="stylesheet" href="/node_modules/swiper/swiper-bundle.min.css">
 
 </head>
 
 <body>
-  <div id="preloader"></div>
+  <div id="root"></div>
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
@@ -106,11 +108,11 @@
               experiences.
             <p>In addition to the above, he is studying and improving his English, he is also studying on platforms such
               as <a href="https://platzi.com/p/JeroRm/" target="_blank" rel="noopener noreferrer" title="Platzi JeroRm"
-                style="text-decoration: underline; font-weight: bold;">Platzi</a>, <a href="https://www.udemy.com"
-                target="_blank" rel="noopener noreferrer" title="Udemy"
-                style="text-decoration: underline; font-weight: bold;">Udemy</a> and <a href="https://www.coursera.org"
-                target="_blank" rel="noopener noreferrer" title="Coursera"
-                style="text-decoration: underline; font-weight: bold;">Coursera</a>.</p>
+                class="link-styled">Platzi,<a> </a></a><a href="https://www.udemy.com" target="_blank"
+                rel="noopener noreferrer" title="Platzi JeroRm" class="link-styled">Udemy</a> and <a
+                href="https://www.coursera.org" target="_blank" rel="noopener noreferrer" title="Platzi JeroRm"
+                class="link-styled">Coursera.</a>
+            </p>
           </div>
         </div>
 
@@ -470,7 +472,7 @@
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Testimonials Section ======= -->
+    <!-- ======= Quotes Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -559,7 +561,7 @@
         <div class="row mt-1">
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="" method="post" role="form" class="php-email-form">
+            <form action="" method="" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -608,6 +610,7 @@
 
   <!-- Template Main JS File -->
   <script type="module" src="/src/main.jsx"></script>
+  <div id="preloader"></div>
 
 </body>
 
