--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- GLightbox -->
   <link rel="stylesheet" href="/node_modules/glightbox/dist/css/glightbox.min.css">
   <!-- Swiper -->
-  <link rel="stylesheet" href="/node_modules/swiper/swiper-bundle.min.css">
+  <link rel="stylesheet" href="./assets/vendor/swiper/swiper-bundle.min.css">
 
 </head>
 
