update link swiper

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   <link rel="stylesheet" href="/node_modules/boxicons/css/boxicons.min.css">
   <!-- GLightbox -->
   <link rel="stylesheet" href="/node_modules/glightbox/dist/css/glightbox.min.css">
+  <!-- Swiper -->
+  <link rel="stylesheet" href="/node_modules/swiper/swiper-bundle.min.css">
 
 </head>
 
