--- a/index.html
+++ b/index.html
@@ -564,16 +564,20 @@
             <form action="" method="" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
+                  <label class="formTittle" for="name">Name</label>
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
+                  <label class="formTittle" for="name">Email</label>
                   <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
                 </div>
               </div>
               <div class="form-group mt-3">
+                <label class="formTittle" for="name">Subject</label>
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
               </div>
               <div class="form-group mt-3">
+                <label class="formTittle" for="name">Message</label>
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
               <div class="my-3">
